--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nhl-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A Promise-based wrapper for the National Hockey League API",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,14 +12,20 @@
   },
   "keywords": [
     "hockey",
-    "stats"
+    "stats",
+    "api",
+    "node",
+    "nhl"
   ],
-  "author": "Evan Silverman",
+  "author": "Evan Silverman <evanalecs@aol.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/esilverm/node-nhl-api/issues"
   },
   "homepage": "https://github.com/esilverm/node-nhl-api#readme",
   "dependencies": {
+  },
+  "engines": {
+    "node": ">=8.0.0"
   }
 }
