--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Promise-based wrapper for the National Hockey League API",
   "main": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/fetchTest.js"
   },
   "repository": {
     "type": "git",
