--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "statsapi-nhl",
-  "version": "1.0.1",
+  "version": "0.0.0-development",
   "description": "A Promise-based wrapper for the National Hockey League API",
   "main": "./src/index.js",
   "scripts": {
-    "test": "node test/fetchTest.js"
+    "test": "mocha --timeout 15000 test/fullTest.js",
+    "travis-deploy-once": "travis-deploy-once",
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/esilverm/statsapi-nhl.git"
+    "url": "https://github.com/esilverm/statsapi-nhl.git"
   },
   "keywords": [
     "hockey",
@@ -30,6 +32,10 @@
     "node": ">=8.0.0"
   },
   "devDependencies": {
-    "lodash": "^4.17.5"
+    "chai": "^4.1.2",
+    "lodash": "^4.17.5",
+    "mocha": "^5.0.1",
+    "travis-deploy-once": "^4.3.4",
+    "semantic-release": "^12.4.1"
   }
 }
