--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "A Promise-based wrapper for the National Hockey League API",
   "main": "./src/index.js",
   "scripts": {
+    "commit": "git-cz",
     "test": "mocha --timeout 15000 test/fullTest.js",
     "travis-deploy-once": "travis-deploy-once",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release && npm publish"
   },
   "repository": {
     "type": "git",
@@ -33,9 +34,19 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "commitizen": "^2.9.6",
+    "cz-conventional-changelog": "^2.1.0",
     "lodash": "^4.17.5",
     "mocha": "^5.0.1",
-    "travis-deploy-once": "^4.3.4",
-    "semantic-release": "^12.4.1"
-  }
+    "semantic-release": "^12.4.1",
+    "travis-deploy-once": "^4.3.4"
+  },
+  "czConfig": {
+    "path": "node_modules/cz-conventional-changelog"
+  },
+  "config": {
+     "commitizen": {
+       "path": "cz-conventional-changelog"
+     }
+   }
 }
