--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ notifications:
 node_js:
   - '9'
   - '8'
-  - '6'
+script:
+  - npm run test
 after_success:
   - npm run semantic-release
 branches:
