--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "commit": "git-cz",
     "test": "mocha --timeout 15000 test/fullTest.js",
     "travis-deploy-once": "travis-deploy-once",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release && npm publish"
   },
   "repository": {
     "type": "git",
