--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ notifications:
 node_js:
   - '9'
   - '8'
-script:
-  - npm run test
+  - '6'
+  - '4'
 after_success:
-  - npm run semantic-release
+  - npm run travis-deploy-once "npm run semantic-release"
 branches:
   except:
     - /^v\d+\.\d+\.\d+$/
