--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "statsapi-nhl",
-  "version": "0.0.0-sematically-released",
+  "version": "0.0.0-development",
   "description": "A Promise-based wrapper for the National Hockey League API",
   "main": "./src/index.js",
   "scripts": {
     "commit": "git-cz",
     "test": "mocha --timeout 15000 test/fullTest.js",
     "travis-deploy-once": "travis-deploy-once",
-    "semantic-release": "semantic-release && npm publish"
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
@@ -38,15 +38,15 @@
     "cz-conventional-changelog": "^2.1.0",
     "lodash": "^4.17.5",
     "mocha": "^5.0.1",
-    "semantic-release": "^12.4.1",
-    "travis-deploy-once": "^4.3.4"
+    "travis-deploy-once": "^4.3.4",
+    "semantic-release": "^12.4.1"
   },
   "czConfig": {
     "path": "node_modules/cz-conventional-changelog"
   },
   "config": {
-     "commitizen": {
-       "path": "cz-conventional-changelog"
-     }
-   }
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  }
 }
