--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "cz-conventional-changelog": "^2.1.0",
     "lodash": "^4.17.5",
     "mocha": "^5.0.1",
-    "travis-deploy-once": "^4.3.4",
-    "semantic-release": "^12.4.1"
+    "semantic-release": "^12.4.1",
+    "travis-deploy-once": "^4.3.4"
   },
   "czConfig": {
     "path": "node_modules/cz-conventional-changelog"
